--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/vasos.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./css/app.css">
     <title>ONEVISION</title>
 </head>
 
 <body>
-<header class="header">
+    <header class="header">
             
                 <div class="logo">
                     <img src="./img/Logo.png" alt="logo de la marca">
@@ -24,20 +25,27 @@
                         <li class="list-item "><a href="./pages/contact.html">Contactanos</a></li>
                     </ul>
                  </nav>
-</header>
+    </header>
 <main class="productMain">
-
+  <div>
+    <img src="./img/gafas-negras-1536x690.jpg" class="img-fluid" alt="retrato">
+  </div>
+  <section class="welcome">
+    <h1>Bienvenidos a la pagina de ONEVISION</h1>
+    <p>Estamos aqui para ofrecerte lo ultimo en lentes, contactologia y accesorios.</p>
+    <p>Todo el confort lo tenes aqui</p>
+</section>
     <section>
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./img/opticacentral-oakleysol-frogskins.png" class="d-block w-100" alt="...">
+                <img src="./img/opticacentral-oakleysol-frogskins.png" class="d-block w-100" alt="uno">
               </div>
               <div class="carousel-item">
-                <img src="./img/opticacentral-miraflex3914rosado.png" class="d-block w-100" alt="...">
+                <img src="./img/opticacentral-miraflex3914rosado.png" class="d-block w-100" alt="dos">
               </div>
               <div class="carousel-item">
-                <img src="./img/opticacentral-raybansol-clubmaster3.png" class="d-block w-100" alt="...">
+                <img src="./img/opticacentral-raybansol-clubmaster3.png" class="d-block w-100" alt="tres">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -50,11 +58,7 @@
             </button>
           </div>
     </section>
-<section class="welcome">
-    <h1>Bienvenidos a la pagina de ONEVISION</h1>
-    <p>Estamos aqui para ofrecerte lo ultimo en lentes, contactologia y accesorios.</p>
-    <p>Todo el confort lo tenes aqui</p>
-</section>
+
 
 
 
@@ -62,14 +66,15 @@
 
 </main>
 <footer class="footer">
-    <ul>
-        <li class="footer-link "><a href="./index.html">ONEVISION</a></li>
-        <li class="footer-link "><a href="./pages/product.html">Lentes y organicos</a></li>
-        <li class="footer-link "><a href="./pages/sunProduct.html">Lentes de sol</a></li>
-        <li class="footer-link "><a href="./pages/aboutUs.html">Sobre nosotros</a></li>
-        <li class="footer-link "><a href="./pages/contact.html">Contactanos</a></li>
+  <nav>
+    <ul class="nav-links">
+        <li class="list-item "><a href="./index.html">ONEVISION</a></li>
+        <li class="list-item "><a href="./pages/product.html">Lentes y organicos</a></li>
+        <li class="list-item "><a href="./pages/sunProduct.html">Lentes de sol</a></li>
+        <li class="list-item "><a href="./pages/aboutUs.html">Sobre nosotros</a></li>
+        <li class="list-item "><a href="./pages/contact.html">Contactanos</a></li>
     </ul>
-
+  </nav>
 </footer>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
