--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="shortcut icon" href="../img/vasos.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/app.css">
     <title>ONEVISION</title>
 </head>
 <body>
@@ -25,39 +27,59 @@
     </header>
 
     <main class="productMain">
+        <div>
+            <div>
+                <img src="../img/opticacentral-historia-1.png" class="img-fluid" alt="opticacentral-historia-1">
+            </div>
          <h1>Optica ONEVISION</h1>
-<p>
-            Fundada en julio de 1983, nuestra empresa Óptica Central ubicada en Alajuela se convierte en pionera en el servicio de la salud visual ofreciendo el servicio de óptica y optometría.
+            <p>
+                  Fundada en julio de 1983, nuestra empresa Óptica Central ubicada en Alajuela se convierte en pionera en el servicio de la salud visual ofreciendo el servicio de óptica y optometría.
 
- Desde su concepción ofrece el servicio de óptica y optometría contribuyendo en la salud visual de la población, con precios accesibles y variedad en sus productos.
+                  Desde su concepción ofrece el servicio de óptica y optometría contribuyendo en la salud visual de la población, con precios accesibles y variedad en sus productos.
 
-    “Nuestra misión siempre ha sido brindar el mejor servicio óptico basado en el asesoramiento profesional y personalizado a nuestros clientes”, destacó Jefrey Salas, Gerente General, de Óptica Central.
+                 “Nuestra misión siempre ha sido brindar el mejor servicio óptico basado en el asesoramiento profesional y personalizado a nuestros clientes”, destacó Jefrey Salas, Gerente General, de Óptica Central.
 
-Para esas fechas la población en Alajuela buscaba opciones más acordes a sus necesidades reales y por supuesto al nacer esta nueva tienda, se empezó a llenar un vacío importante que la gente aceptó con mucho agrado.
+                  Para esas fechas la población en Alajuela buscaba opciones más acordes a sus necesidades reales y por supuesto al nacer esta nueva tienda, se empezó a llenar un vacío importante que la gente aceptó con mucho agrado.
 
-En ÓPTICA CENTRAL nuestros profesionales de la salud visual le recomendarán una combinación única de lentes adecuada para su necesidad, basados en una receta individualizada. Además le asesorarán en la elección del mejor armazón de acuerdo a sus necesidades. Le ofrecemos gran variedad de aros para toda la familia y lentes de contacto.
+                 En ÓPTICA CENTRAL nuestros profesionales de la salud visual le recomendarán una combinación única de lentes adecuada para su necesidad, basados en una receta individualizada. Además le asesorarán en la elección del mejor armazón de acuerdo a sus necesidades. Le ofrecemos gran variedad de aros para toda la familia y lentes de contacto.
 
-Centro Médico de especialidades, 8 Centros de Servicio/Ópticas en el área metropolitana, convenios con empresas, promociones y otras facilidades nos permiten ofrecer a nuestros clientes excelentes opciones para el cuidado de su salud.
-</p>
-    <h2>Nuestra misión</h2>
-    <p>
-        Es brindar el mejor servicio óptico basado en el asesoramiento profesional y personalizado a nuestros clientes, ofreciendo soluciones relacionadas a la salud visual y al cuidado estético de su imagen.
-    </p>
-    <h2>Nuestra visión</h2>
-    <p>
-        Ser la óptica número 1 de Córdoba, donde nuestro ícono distintivo sea la respuesta acertada a las necesidades presentes y futuras de nuestros clientes, complementadas con productos de calidad y acompañadas por la tecnología de punta que mejora la calidad de vida de nuestros pacientes.
-    </p>
+                Centro Médico de especialidades, 8 Centros de Servicio/Ópticas en el área metropolitana, convenios con empresas, promociones y otras facilidades nos permiten ofrecer a nuestros clientes excelentes opciones para el cuidado de su salud.
+            </p>
+        </div>
 
-    </main>
+    <div>    
+        <div>
+            <img src="../img/opticacentral-servicios2a-600x607.png" class="img-fluid" alt="opticacentral-servicios2a">
+        </div>
+        <h2>Nuestra misión</h2>
+             <p>
+               Es brindar el mejor servicio óptico basado en el asesoramiento profesional y personalizado a nuestros clientes, ofreciendo soluciones relacionadas a la salud visual y al cuidado estético de su imagen.
+             </p>
+
+    </div>      
+    
+    <div>
+        <div>
+            <img src="../img/opticacentral-servicios2b-600x607.png" class="img-fluid" alt="opticacentral-servicios2b">
+        </div>
+         <h2>Nuestra visión</h2>
+             <p>
+             Ser la óptica número 1 de Córdoba, donde nuestro ícono distintivo sea la respuesta acertada a las necesidades presentes y futuras de nuestros clientes, complementadas con productos de calidad y acompañadas por la tecnología de punta que mejora la calidad de vida de nuestros pacientes.
+            </p>
+    </div>
+
+</main>
 
     <footer class="footer">
-        <ul>
-            <li class="footer-link "><a href="./index.html">ONEVISION</a></li>
-            <li class="footer-link "><a href="./pages/product.html">Lentes y organicos</a></li>
-            <li class="footer-link "><a href="./pages/sunProduct.html">Lentes de sol</a></li>
-            <li class="footer-link "><a href="./pages/aboutUs.html">Sobre nosotros</a></li>
-            <li class="footer-link "><a href="./pages/contact.html">Contactanos</a></li>
-        </ul>
+        <nav>
+            <ul class="nav-links">
+              <li class="list-item "><a href="./index.html">ONEVISION</a></li>
+              <li class="list-item "><a href="./pages/product.html">Lentes y organicos</a></li>
+              <li class="list-item "><a href="./pages/sunProduct.html">Lentes de sol</a></li>
+              <li class="list-item "><a href="./pages/aboutUs.html">Sobre nosotros</a></li>
+              <li class="list-item "><a href="./pages/contact.html">Contactanos</a></li>
+            </ul>
+          </nav> 
     </footer>
 </body>
 </html>
