--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="shortcut icon" href="../img/vasos.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/app.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>ONEVISION</title>
 </head>
@@ -25,7 +26,12 @@
          </nav>
 </header>
 <main class="productMain">
-    <div class="input-group mb-3">
+  <div class="contactanos">
+    <h1>Contactanos</h1>
+    <h2>Cualquier duda o consulta, será atendida a la brevedad por nuestros asesores.</h2>
+  </div>
+  <div class="contact">
+      <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon1">@</span>
         <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
       </div>
@@ -60,17 +66,19 @@
         <span class="input-group-text">With textarea</span>
         <textarea class="form-control" aria-label="With textarea"></textarea>
       </div>
+  </div>
+
 </main>
 <footer class="footer">
-
-    <ul>
-        <li class="footer-link "><a href="./index.html">ONEVISION</a></li>
-        <li class="footer-link "><a href="./pages/product.html">Lentes y organicos</a></li>
-        <li class="footer-link "><a href="./pages/sunProduct.html">Lentes de sol</a></li>
-        <li class="footer-link "><a href="./pages/aboutUs.html">Sobre nosotros</a></li>
-        <li class="footer-link "><a href="./pages/contact.html">Contactanos</a></li>
+  <nav>
+    <ul class="nav-links">
+      <li class="list-item "><a href="./index.html">ONEVISION</a></li>
+      <li class="list-item "><a href="./pages/product.html">Lentes y organicos</a></li>
+      <li class="list-item "><a href="./pages/sunProduct.html">Lentes de sol</a></li>
+      <li class="list-item "><a href="./pages/aboutUs.html">Sobre nosotros</a></li>
+      <li class="list-item "><a href="./pages/contact.html">Contactanos</a></li>
     </ul>
-
+  </nav> 
 </footer>
 </body>
 
