--- a/pages/product.html
+++ b/pages/product.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="shortcut icon" href="../img/vasos.png" type="image/x-icon">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../css/app.css">
     <title>ONEVISION</title>
 </head>
 <body>
@@ -25,18 +26,21 @@
          </nav>
 </header>
 <main class="productMain">
+  <div class="contactanos">
+    <H1>Recomendados</H1>
+  </div>
   <div>
     <section>
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../img/opticacentral-carrera169v06j.png" class="d-block w-100" alt="...">
+                <img src="../img/opticacentral-carrera169v06j.png" class="d-block w-100" alt="uno">
               </div>
               <div class="carousel-item">
-                <img src="../img/opticacentral-lacoste2749214.png" class="d-block w-100" alt="...">
+                <img src="../img/opticacentral-lacoste2749214.png" class="d-block w-100" alt="dos">
               </div>
               <div class="carousel-item">
-                <img src="../img/opticacentral-mystique5047demi.png" class="d-block w-100" alt="...">
+                <img src="../img/opticacentral-mystique5047demi.png" class="d-block w-100" alt="tres">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -49,6 +53,9 @@
             </button>
           </div>
     </section>
+  </div>
+  <div class="contactanos">
+    <h1 >LENTES Y ORGANICOS</h1>
   </div>
   <section class="products">
     <div class="product1">
@@ -63,7 +70,7 @@
         <img src="../img/opticacentral-carrera169v06j.png" alt="Bifocal">
         <h3 >lente bifocal</h3>
         <p class="description">Lentes para ver de lejos y cerca</p>
-        <p class="price">35.000</p>
+        <p class="price">60.000</p>
         <a href="/">Comprar</a>
     </div>
 
@@ -71,7 +78,7 @@
         <img src="../img/opticacentral-davinchi109mbrown.png" alt="Bifocal">
         <h3 >lente bifocal</h3>
         <p class="description">Lentes para ver de lejos y cerca</p>
-        <p class="price">35.000</p>
+        <p class="price">40.000</p>
         <a href="/">Comprar</a>
     </div>
 
@@ -79,7 +86,7 @@
       <img src="../img/opticacentral-lacoste2749214.png" alt="Bifocal">
       <h3 >lente bifocal</h3>
       <p class="description">Lentes para ver de lejos y cerca</p>
-      <p class="price">35.000</p>
+      <p class="price">75.000</p>
       <a href="/">Comprar</a>
     </div>
 
@@ -87,7 +94,7 @@
        <img src="../img/opticacentral-mystique5047demi.png" alt="Bifocal">
        <h3 >lente bifocal</h3>
        <p class="description">Lentes para ver de lejos y cerca</p>
-       <p class="price">35.000</p>
+       <p class="price">54.000</p>
        <a href="/">Comprar</a>
     </div>
 
@@ -95,7 +102,7 @@
       <img src="../img/opticacentral-miraflex4214negro.png" alt="Bifocal">
       <h3 >lente bifocal</h3>
       <p class="description">Lentes para ver de lejos y cerca</p>
-      <p class="price">35.000</p>
+      <p class="price">34.000</p>
       <a href="/">Comprar</a>
     </div>
 
@@ -103,7 +110,7 @@
       <img src="../img/opticacentral-miraflex3914azul.png" alt="Bifocal">
       <h3 >lente bifocal</h3>
       <p class="description">Lentes para ver de lejos y cerca</p>
-      <p class="price">35.000</p>
+      <p class="price">34.000</p>
       <a href="/">Comprar</a>
     </div>
 
@@ -111,15 +118,15 @@
       <img src="../img/opticacentral-miraflex3914rosado.png" alt="Bifocal">
       <h3 >lente bifocal</h3>
       <p class="description">Lentes para ver de lejos y cerca</p>
-      <p class="price">35.000</p>
+      <p class="price">34.000</p>
       <a href="/">Comprar</a>
     </div>
 
     <div class="product1">
       <img src="../img/opticacentral-AcuvueOasys.png" alt="Bifocal">
-      <h3 >lente bifocal</h3>
-      <p class="description">Lentes para ver de lejos y cerca</p>
-      <p class="price">35.000</p>
+      <h3 >lentes de contacto</h3>
+      <p class="description">Para atigmatismo y miopia.pack por 6</p>
+      <p class="price">150.000</p>
       <a href="/">Comprar</a>
     </div>
 
@@ -138,13 +145,15 @@
 </main>
 
 <footer class="footer">
-  <ul>
-      <li class="footer-link "><a href="./index.html">ONEVISION</a></li>
-      <li class="footer-link "><a href="./pages/product.html">Lentes y organicos</a></li>
-      <li class="footer-link "><a href="./pages/sunProduct.html">Lentes de sol</a></li>
-      <li class="footer-link "><a href="./pages/aboutUs.html">Sobre nosotros</a></li>
-      <li class="footer-link "><a href="./pages/contact.html">Contactanos</a></li>
-  </ul>
+  <nav>
+    <ul class="nav-links">
+      <li class="list-item "><a href="./index.html">ONEVISION</a></li>
+      <li class="list-item "><a href="./pages/product.html">Lentes y organicos</a></li>
+      <li class="list-item "><a href="./pages/sunProduct.html">Lentes de sol</a></li>
+      <li class="list-item "><a href="./pages/aboutUs.html">Sobre nosotros</a></li>
+      <li class="list-item "><a href="./pages/contact.html">Contactanos</a></li>
+    </ul>
+  </nav> 
 </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
