--- a/pages/sunProduct.html
+++ b/pages/sunProduct.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../img/vasos.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../css/app.css">
     <title>ONEVISION</title>
 </head>
 <body>
@@ -25,18 +26,20 @@
          </nav>
 </header>
     <main class="productMain">
-
+      <div class="contactanos">
+        <H1>Recomendados</H1>
+      </div>
         <section>
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../img/opticacentral-oakleysol-frogskins.png" class="d-block w-100" alt="...">
+                    <img src="../img/opticacentral-oakleysol-frogskins.png" class="d-block w-100" alt="uno">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/opticacentral-miraflex3914rosado.png" class="d-block w-100" alt="...">
+                    <img src="../img/opticacentral-miraflex3914rosado.png" class="d-block w-100" alt="dos">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/opticacentral-raybansol-clubmaster3.png" class="d-block w-100" alt="...">
+                    <img src="../img/opticacentral-raybansol-clubmaster3.png" class="d-block w-100" alt="tres">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -49,54 +52,58 @@
                 </button>
               </div>
         </section>
-
+        <div class="contactanos">
+          <H1>LENTES DE SOL</H1>
+        </div>
         <section class="products">
 
           <div class="product1">
             <img src="../img/opticacentral-polaroidsol3018SDL5Y2.png" alt="Bifocal">
-            <h3 >lente bifocal</h3>
-            <p class="description">Lentes para ver de lejos y cerca</p>
-            <p class="price">35.000</p>
+            <h3 >lentes de sol</h3>
+            <p class="description">lentes con protección contra uv</p>
+            <p class="price">65.000</p>
             <a href="/">Comprar</a>
           </div>
 
           <div class="product1">
             <img src="../img/opticacentral-polaroidsol4054S205M9.png" alt="Bifocal">
-            <h3 >lente bifocal</h3>
-            <p class="description">Lentes para ver de lejos y cerca</p>
-            <p class="price">35.000</p>
+            <h3 >lentes de sol</h3>
+            <p class="description">lentes con protección contra uv</p>
+            <p class="price">55.000</p>
             <a href="/">Comprar</a>
           </div>
 
           <div class="product1">
             <img src="../img/opticacentral-oakleysol-HolbrookMetal.png" alt="Bifocal">
-            <h3 >lente bifocal</h3>
-            <p class="description">Lentes para ver de lejos y cerca</p>
-            <p class="price">35.000</p>
+            <h3 >lentes de sol</h3>
+            <p class="description">lentes con protección contra uv</p>
+            <p class="price">65.000</p>
             <a href="/">Comprar</a>
           </div>
 
           <div class="product1">
             <img src="../img/opticacentral-oakleysol-frogskins.png" alt="Bifocal">
-            <h3 >lente bifocal</h3>
-            <p class="description">Lentes para ver de lejos y cerca</p>
-            <p class="price">35.000</p>
+            <h3 >lentes de sol</h3>
+            <p class="description">lentes con protección contra uv</p>
+            <p class="price">65.000</p>
             <a href="/">Comprar</a>
           </div>
 
           <div class="product1">
             <img src="../img/opticacentral-oakleysolMix.png" alt="Bifocal">
-            <h3 >lente bifocal</h3>
-            <p class="description">Lentes para ver de lejos y cerca</p>
-            <p class="price">35.000</p>
+            <h3 >lente de sol y bifocal</h3>
+            <p class="description">Lentes para ver de lejos y cerca,
+                                    lentes con protección contra uv</p>
+            <p class="price">75.000</p>
             <a href="/">Comprar</a>
           </div>
           
           <div class="product1">
             <img src="../img/opticacentral-raybansol-clubmaster.png" alt="Bifocal">
-            <h3 >lente bifocal</h3>
-            <p class="description">Lentes para ver de lejos y cerca</p>
-            <p class="price">35.000</p>
+            <h3 >lente de sol y bifocal</h3>
+            <p class="description">Lentes para ver de lejos y cerca,
+                                  lentes con protección contra uv</p>
+            <p class="price">75.000</p>
             <a href="/">Comprar</a>
           </div>
         </section>
@@ -105,13 +112,15 @@
     </main>
 
     <footer class="footer">
-      <ul>
-          <li class="footer-link "><a href="./index.html">ONEVISION</a></li>
-          <li class="footer-link "><a href="./pages/product.html">Lentes y organicos</a></li>
-          <li class="footer-link "><a href="./pages/sunProduct.html">Lentes de sol</a></li>
-          <li class="footer-link "><a href="./pages/aboutUs.html">Sobre nosotros</a></li>
-          <li class="footer-link "><a href="./pages/contact.html">Contactanos</a></li>
-      </ul>
+      <nav>
+        <ul class="nav-links">
+          <li class="list-item "><a href="./index.html">ONEVISION</a></li>
+          <li class="list-item "><a href="./pages/product.html">Lentes y organicos</a></li>
+          <li class="list-item "><a href="./pages/sunProduct.html">Lentes de sol</a></li>
+          <li class="list-item "><a href="./pages/aboutUs.html">Sobre nosotros</a></li>
+          <li class="list-item "><a href="./pages/contact.html">Contactanos</a></li>
+        </ul>
+      </nav> 
   </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
